Add api documentation to endpoint /payment
