# api-gateway/controllers/payment_controller.go
@@ -30,6 +30,19 @@ func (p *PaymentImpl) Create(c echo.Context) error {
 	return nil
 }
 
+// @Summary 	Get Payment by Invoice ID (Owner, Admin)
+// @Description Get Payment by Invoice ID
+// @Tags 			Payment
+// @Accept 		json
+// @Produce 	json
+// @Param        Authorization header string true "JWT Token"
+// @Param 			id path integer true "Invoice ID"
+// @Success 	200 {object} web.SwPaymentInvoice
+// @Failure 	400 {object} web.ErrWebResponse
+// @Failure 	401 {object} web.ErrWebResponse
+// @Failure 	404 {object} web.ErrWebResponse
+// @Failure 	500 {object} web.ErrWebResponse
+// @Router 		/payment/{id} [get]
 func (p *PaymentImpl) FindByInvoiceID(c echo.Context) error {
 	invoiceID := c.Param("id")
 
@@ -52,6 +65,19 @@ func (p *PaymentImpl) FindByInvoiceID(c echo.Context) error {
 	return utils.SuccessMessage(c, &utils.ApiOk, resp)
 }
 
+// @Summary 	Get Payment by Order ID (Owner, Admin)
+// @Description Get Payment by Order ID
+// @Tags 			Payment
+// @Accept 		json
+// @Produce 	json
+// @Param        Authorization header string true "JWT Token"
+// @Param 			id path integer true "Order ID"
+// @Success 	200 {object} web.SwPaymentInvoice
+// @Failure 	400 {object} web.ErrWebResponse
+// @Failure 	401 {object} web.ErrWebResponse
+// @Failure 	404 {object} web.ErrWebResponse
+// @Failure 	500 {object} web.ErrWebResponse
+// @Router 		/payment/order/{id} [get]
 func (p *PaymentImpl) FindByOrderID(c echo.Context) error {
 	orderID := c.Param("id")
 
@@ -74,6 +100,21 @@ func (p *PaymentImpl) FindByOrderID(c echo.Context) error {
 	return utils.SuccessMessage(c, &utils.ApiOk, resp)
 }
 
+// @Summary 	Get Payment by User ID (Owner, Admin)
+// @Description Get Payment by User ID
+// @Tags 			Payment
+// @Accept 		json
+// @Produce 	json
+// @Param        Authorization header string true "JWT Token"
+// @Param 			id path integer true "Owner ID"
+// @Param        page    query     integer  false  "Page"
+// @Param        status    query     string  false  "status"
+// @Success 	200 {object} web.SwPaymentByUserID
+// @Failure 	400 {object} web.ErrWebResponse
+// @Failure 	401 {object} web.ErrWebResponse
+// @Failure 	404 {object} web.ErrWebResponse
+// @Failure 	500 {object} web.ErrWebResponse
+// @Router 		/payment/user/{id} [get]
 func (p *PaymentImpl) FindByUserID(c echo.Context) error {
 	userID := c.Param("id")
 	userIDInt, err := strconv.Atoi(userID)
